--- a/categoria.html
+++ b/categoria.html
@@ -119,6 +119,61 @@
         if (productosFiltrados.length === 0) {
             productGrid.innerHTML = '<p>No hay productos disponibles en esta categoría.</p>';
         }
+
+        // Manejar la barra de búsqueda y sugerencias
+    document.getElementById('searchInput').addEventListener('input', function () {
+        const query = this.value.toLowerCase();
+        const suggestions = document.getElementById('suggestions');
+        suggestions.innerHTML = '';
+        suggestions.style.display = 'none';
+
+        if (query.length > 0) {
+            const filteredProducts = productos.filter(producto =>
+                producto.nombre.toLowerCase().includes(query) ||
+                producto.descripcion.toLowerCase().includes(query) ||
+                producto.categoria.toLowerCase().includes(query) ||
+                (producto.codigo && producto.codigo.toLowerCase().includes(query))
+            );
+
+            if (filteredProducts.length > 0) {
+                filteredProducts.slice(0, 5).forEach(producto => {
+                    const div = document.createElement('div');
+                    div.textContent = producto.nombre;
+                    div.addEventListener('click', () => {
+                        window.location.href = `producto.html?nombre=${encodeURIComponent(producto.nombre)}&imagen=${producto.imagen}&imagenes=${producto.imagenes.join(',')}&descripcion=${encodeURIComponent(producto.descripcion)}&caracteristicas=${producto.caracteristicas.map(c => encodeURIComponent(c)).join(',')}`;
+                    });
+                    suggestions.appendChild(div);
+                });
+                suggestions.style.display = 'block';
+            }
+        }
+    });
+
+    // Cerrar sugerencias al hacer clic fuera
+    document.addEventListener('click', function (e) {
+        const searchBar = document.querySelector('.search-bar');
+        if (!searchBar.contains(e.target)) {
+            document.getElementById('suggestions').style.display = 'none';
+        }
+    });
+
+    // Redirigir al hacer clic en el botón de búsqueda
+    document.querySelector('.search-btn').addEventListener('click', function () {
+        const query = document.getElementById('searchInput').value;
+        if (query) {
+            window.location.href = `busqueda.html?query=${encodeURIComponent(query)}`;
+        }
+    });
+
+    // Redirigir al presionar Enter
+    document.getElementById('searchInput').addEventListener('keypress', function (e) {
+        if (e.key === 'Enter') {
+            const query = this.value;
+            if (query) {
+                window.location.href = `busqueda.html?query=${encodeURIComponent(query)}`;
+            }
+        }
+    });
 </script>
 </body>
 </html>
