--- a/producto.html
+++ b/producto.html
@@ -46,9 +46,10 @@
                 <ul>
                     <li><a href="categoria.html?nombre=Cocinas">Cocinas</a></li>
                     <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
-                    <li><a href="categoria.html?nombre=Televisores">Televisores</a></li>
-                    <li><a href="categoria.html?nombre=Celulares">Celulares</a></li>
-                    <li><a href="categoria.html?nombre=Hornos y microondas">Hornos y microondas</a></li>
+                    <li><a href="categoria.html?nombre=Tv y audio">Tv y audio</a></li>
+                    <li><a href="categoria.html?nombre=Tecnologia">Tecnología</a></li>
+                    <li><a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, microondas y freidoras</a></li>
+                    <li><a href="categoria.html?nombre=Climatizacion">Climatización</a></li>
                     <li><a href="categoria.html?nombre=Lavarropas y secarropas">Lavarropas y secarropas</a></li>
                     <li><a href="categoria.html?nombre=Pequeños electrodomésticos">Pequeños electrodomésticos</a></li>
                 </ul>
