--- a/admin.html
+++ b/admin.html
@@ -159,6 +159,7 @@ const categoryFields = {
                 { label: "Pulgadas", name: "pulgadas", type: "text", placeholder: '6,7"' },
                 { label: "Cámara trasera", name: "camarat", type: "text", placeholder: "32 Mpx" },
                 { label: "Cámara frontal", name: "camaraf", type: "text", placeholder: "8 Mpx" },
+                { label: "NFC", name: "red", type: "select", options: ["No", "Sí"] },
                 { label: "Batería", name: "bateria", type: "text", placeholder: "5.2 Ah" },
                 { label: "Red móvil", name: "red", type: "select", options: ["4G", "5G"] },
                 { label: "Sistema operativo", name: "sistema_operativo", type: "text", placeholder: "Android" }
