Botones de filtro y menu interactivo movil

--- a/categoria.html
+++ b/categoria.html
@@ -161,6 +161,18 @@
         </div>
     </footer>
 
+    <!-- Botón flotante para filtros -->
+<button class="filter-float" title="Abrir filtros" aria-label="Abrir filtros">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="4" y1="6" x2="20" y2="6"></line>
+        <line x1="4" y1="12" x2="20" y2="12"></line>
+        <line x1="4" y1="18" x2="20" y2="18"></line>
+        <circle cx="8" cy="6" r="1"></circle>
+        <circle cx="8" cy="12" r="1"></circle>
+        <circle cx="8" cy="18" r="1"></circle>
+    </svg>
+</button>
+
     <!-- Botón flotante para volver arriba -->
     <button class="scroll-to-top" title="Volver arriba">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -450,11 +462,6 @@ function mostrarFiltrosActivos() {
             });
             history.replaceState(null, '', `categoria.html?nombre=${encodeURIComponent(categoria)}${subcategoria ? `&subcategoria=${encodeURIComponent(subcategoria)}` : ''}`);
             filtrarProductos();
-        });
-
-        // Alternar filtros en móvil
-        document.querySelector('.filter-toggle').addEventListener('click', () => {
-            document.querySelector('.filters').classList.toggle('active');
         });
 
         // Función para filtrar productos
